Feature restaurants CRUD endpoints (#205)
* Update composer dependencies

* Crete CRUD endpoints for restaurants

* Create swagger documentation for new endpoints

* Update README
