# src/routes.php
@@ -9,3 +9,4 @@
 	require_once "./Modules/User/routes.php";
 	require_once "./Modules/Country/routes.php";
 	require_once "./Modules/City/routes.php";
+	require_once "./Modules/Restaurant/routes.php";
